# sift

./: .gitignore  README.md  pyproject.toml
datasets/labeled/: holdout_adversarial.csv  labels.csv
scripts/: adv_holdout.py  collect_pending.py  eval_pending.py  fix_misclass.py  rebuild_labels.py  review_iteration.py  sync_holdout.py  train.py  train_eval.py
src/sift/: __init__.py  cli.py  model.py  strings_extract.py
src/sift/models/: sift.pkl
tools/: pystrings.py
