[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-junk-filter"
version = "0.1.0"
description = "CLI for filtering junk strings from binary string output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scikit-learn",
  "scipy",
]

[project.scripts]
sift = "sift.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sift = ["models/*.pkl"]
